--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "remarkable-emoji",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "description": "Plugin to add emoji support to https://github.com/jonschlinkert/remarkable",
     "author": "Askabt (info@askabt.in)",
     "homepage": "http://scrollback.io",
@@ -9,7 +9,7 @@
     ],
     "repository": {
         "type": "git",
-        "path": "https://github.com/eugeneware/remarkable-meta"
+        "url": "https://github.com/scrollback/remarkable-emoji"
     },
     "bugs": "https://github.com/scrollback/remarkable-emoji/issues",
     "contributors": [
